<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".85">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <!-- Título -->
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TitleText"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <!-- Geolocalización -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_geolocation"
                style="@style/HeaderText" />

            <RadioGroup
                android:id="@+id/geolocationRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioGps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_gps"
                    style="@style/RadioButtonStyle" />

                <RadioButton
                    android:id="@+id/radioCityCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_city_country"
                    style="@style/RadioButtonStyle"/>

                <RadioButton
                    android:id="@+id/radioManual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_manual"
                    style="@style/RadioButtonStyle" />
            </RadioGroup>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Coordenadas por GPS -->
            <LinearLayout
                android:id="@+id/gpsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_gps_coordinates"
                    style="@style/HeaderText" />

                <TextView
                    android:id="@+id/coordinatesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_coordinates"
                    style="@style/BodyText"
                    android:textSize="16sp" />
                <Button
                    android:id="@+id/btn_getGPSLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_getLocation"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_location_permission"
                    style="@style/InfoText" />
            </LinearLayout>

            <!-- Coordenadas por Ciudad y País -->
            <LinearLayout
                android:id="@+id/cityCountryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_city_country_coordinates"
                    style="@style/HeaderText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_format_city_country"
                    style="@style/InfoText" />
                <EditText
                    android:id="@+id/cityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:hint="@string/hint_city"
                    style="@style/EditTextStyle"
                    android:autofillHints="addressCity" />

                <TextView
                    android:id="@+id/cityCoordinates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/BodyText"  />
                <Button
                    android:id="@+id/btn_getCityLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_getLocation"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_internet_data"
                    style="@style/InfoText" />
            </LinearLayout>

            <!-- Introducir Coordenadas Manualmente -->
            <LinearLayout
                android:id="@+id/manualLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_manual_coordinates"
                    style="@style/HeaderText" />

                <EditText
                    android:id="@+id/latitudeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_latitude"
                    style="@style/EditTextStyle"
                    android:autofillHints="latitude" />

                <EditText
                    android:id="@+id/longitudeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_longitude"
                    style="@style/EditTextStyle"
                    android:autofillHints="longitude" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_coordinate_format"
                    style="@style/InfoText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp">
                <Button
                    android:id="@+id/btn_open"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/generate_chart"/>

            </LinearLayout>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.gms.ads.AdView
    android:id="@+id/adView"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight=".15"
    android:padding="0dp"
    android:layout_margin="0dp"
    ads:adSize="SMART_BANNER"
    ads:adUnitId="ca-app-pub-8077301805868229/8278389507"/>

</androidx.appcompat.widget.LinearLayoutCompat>