<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".85">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <!-- Encabezado -->
            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_solar_and_lunar_eclipses"
                style="@style/TitleText"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <!-- Próximo eclipse -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_next_solar_eclipse" />
                    <TextView
                        android:id="@+id/next_eclipse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_type_of_solar_eclipse" />
                    <TextView
                        android:id="@+id/next_type_eclipse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_eclipse_latitude" />
                        <TextView
                            android:id="@+id/next_latitude_eclipse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_eclipse_longitude" />
                        <TextView
                            android:id="@+id/next_longitude_eclipse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <!-- Encabezado -->
            <TextView
                android:id="@+id/header_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_search_by_year"
                style="@style/TitleText"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <!-- Consulta año -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_enter_the_year_to_look_for" />
                <EditText
                    android:id="@+id/year_solar_eclipse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:inputType="number"
                    android:maxLength="4" />
                <Button
                    android:id="@+id/btn_eclipse_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Search"/>
            </LinearLayout>

            <!-- Sección de eclipses solares -->
            <TextView
                android:id="@+id/solar_eclipses_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/HeaderText"
                android:text="@string/str_global_solar_eclipses" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/global_solar_eclipses_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"/>
            </ScrollView>
            <!-- Sección de eclipses solares -->
            <TextView
                android:id="@+id/local_solar_eclipses_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/HeaderText"
                android:text="@string/str_local_solar_eclipses" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/local_solar_eclipses_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"/>
            </ScrollView>

            <!-- Sección de eclipses lunares -->
            <TextView
                android:id="@+id/lunar_eclipses_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/HeaderText"
                android:text="@string/str_lunar_eclipses" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lunar_eclipses_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"/>
            </ScrollView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8077301805868229/5815796868" >
    </com.google.android.gms.ads.AdView>
</LinearLayout>