<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:padding="5dp"
    android:layout_gravity="center_horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/dialog_background"
        android:layout_gravity="center_horizontal" >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/dialog_message_0"/>
        <!--<com.google.android.material.divider.MaterialDivider
            style="@style/DividerStyle" />-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_margin="5dp"
            android:background="@drawable/above_shadow">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp"
                    android:text="@string/dialog_message_1" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/dialog_message_2" />

            </LinearLayout>
        </ScrollView>

        <!--<com.google.android.material.divider.MaterialDivider
            style="@style/DividerStyle" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:minWidth="200dp" >
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:minWidth="48dp"
                android:layout_height="wrap_content"
                android:text="@string/never_show"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:minWidth="48dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_ok"
                style="?android:attr/buttonBarButtonStyle"  />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

